Bug 1576463 - canvas toDataURL and toBlob should not throw for serialization errors, r=jya

Differential Revision: https://phabricator.services.mozilla.com/D45121

--HG--
extra : moz-landing-system : lando